--- a/Task 1,2,3/Source Code/app/src/main/res/layout/activity_main.xml
+++ b/Task 1,2,3/Source Code/app/src/main/res/layout/activity_main.xml
@@ -106,6 +106,7 @@
         android:paddingLeft="12dp"
         android:paddingTop="0dp"
         android:textColorHint="#FFFFFF"
+        android:textColor="@color/white"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -121,6 +122,7 @@
         android:background="@drawable/round_text"
         android:drawableLeft="@drawable/ic_baseline_lock_24"
         android:drawablePadding="10dp"
+        android:textColor="@color/white"
         android:ems="10"
         android:fontFamily="casual"
         android:hint="Password"
