--- a/Task 1,2,3/Source Code/app/src/main/res/layout/activity_page2.xml
+++ b/Task 1,2,3/Source Code/app/src/main/res/layout/activity_page2.xml
@@ -60,9 +60,9 @@
         app:layout_constraintVertical_bias="0.197" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress2"
-        android:layout_width="277dp"
-        android:layout_height="43dp"
+        android:id="@+id/ed1"
+        android:layout_width="240dp"
+        android:layout_height="35dp"
         android:background="@drawable/round_text"
         android:drawableLeft="@drawable/ic_baseline_edit_24"
         android:drawablePadding="15dp"
@@ -73,7 +73,7 @@
         android:paddingLeft="20dp"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF"
-        android:textSize="17sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,9 +81,9 @@
         app:layout_constraintVertical_bias="0.392" />
 
     <EditText
-        android:id="@+id/editTextNumberPassword"
-        android:layout_width="277dp"
-        android:layout_height="43dp"
+        android:id="@+id/ed2"
+        android:layout_width="240dp"
+        android:layout_height="35dp"
         android:background="@drawable/round_text"
         android:drawableLeft="@drawable/ic_baseline_lock_24"
         android:drawablePadding="15dp"
@@ -93,7 +93,7 @@
         android:inputType="numberPassword"
         android:paddingLeft="20dp"
         android:textColorHint="#FFFFFF"
-        android:textSize="17sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -101,9 +101,9 @@
         app:layout_constraintVertical_bias="0.515" />
 
     <EditText
-        android:id="@+id/editTextNumberPassword2"
-        android:layout_width="277dp"
-        android:layout_height="43dp"
+        android:id="@+id/ed3"
+        android:layout_width="240dp"
+        android:layout_height="35dp"
         android:background="@drawable/round_text"
         android:drawableLeft="@drawable/ic_baseline_lock_24"
         android:drawablePadding="15dp"
@@ -114,7 +114,7 @@
         android:paddingLeft="20dp"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF"
-        android:textSize="17sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
