--- a/Task 1,2,3/Source Code/app/src/main/res/values/themes.xml
+++ b/Task 1,2,3/Source Code/app/src/main/res/values/themes.xml
@@ -13,4 +13,16 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Theme.Task1_ISA.Fullscreen" parent="Theme.Task1_ISA">
+        <item name="android:actionBarStyle">@style/Widget.Theme.Task1_ISA.ActionBar.Fullscreen
+        </item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowBackground">@null</item>
+    </style>
+
+    <style name="ThemeOverlay.Task1_ISA.FullscreenContainer" parent="">
+        <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
+        <item name="fullscreenTextColor">@color/light_blue_A200</item>
+    </style>
 </resources>
